stopped board overflow(I thinkcaused by aspect-ratio) by using max-width=100vh

--- a/game.css
+++ b/game.css
@@ -3,13 +3,15 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     justify-content: center;
+    margin: auto auto auto auto;
+    max-width: 100vh;
 }
 .grid_part{
     display: flex;
     justify-content: center;
     align-items: center;
     border: 2px solid #000000;
-    aspect-ratio: 1;
+    aspect-ratio: 1/1;
     font-size: 64px;
 }
 .row1 {
